--- a/public/gitweb.css
+++ b/public/gitweb.css
@@ -1,9 +1,13 @@
+* {
+  margin:0;
+  padding:0;
+}
+
 body {
 	font-family: sans-serif;
 	font-size: 100%;
 	border: solid #d9d8d1;
 	border-width: 1px;
-	margin: 10px;
 	background-color: #ffffff;
 	color: #000000;
 }
