--- a/public/css/common.css
+++ b/public/css/common.css
@@ -56,6 +56,21 @@
   margin-top:30px;
 }
 
+/* Border radius */
+.radius-top {
+  border-top-left-radius:4px;
+  border-top-right-radius:4px;
+}
+
+.radius-bottom {
+  border-bottom-left-radius:4px;
+  border-bottom-right-radius:4px;
+}
+
+.radius {
+  border-radius:4px;
+}
+
 /* Border */
 .border-bottom-none {
   border-bottom:none;
@@ -84,6 +99,14 @@
   border-top-right-radius:0;
   border-bottom-right-radius:0;
   margin-right:0;
+}
+
+.border-blue {
+  border:1px solid #c5d5dd;
+}
+
+.border-blue-light {
+  
 }
 
 /* Commit page */
