--- a/public/css/common.css
+++ b/public/css/common.css
@@ -14,6 +14,10 @@
   text-size-adjust: 100%;
 }
 
+li {
+  list-style:none;
+}
+
 [class^="icon-"],
 [class*=" icon-"] {
   display: inline-block;
@@ -174,4 +178,53 @@
 
 .header-navi li a {
 
+}
+
+.user-list-header {
+  background-color: #f5f5f5;
+  margin: 0;
+  border-radius: 3px 3px 0 0;
+  border: 1px solid #d8d8d8;
+  border-bottom: 0;
+  padding: 9px 10px 10px;
+  font-size: 14px;
+  line-height: 17px;
+  display: block;
+  margin-top:20px;
+  width:50%;
+}
+
+.user-list-body {
+  width:50%;
+}
+
+.user-list-body li {
+  display:block;
+}
+
+.user-list-body li a {
+  text-decoration:none;
+  border: 1px solid #d8d8d8;
+  border-bottom:none;
+  display:block;
+  width:100%;
+  padding: 9px 10px 10px;
+  color:#4078c0;
+  font-weight:bold;
+}
+
+.user-list-body li a:hover {
+  text-decoration:underline;
+}
+
+.user-list-body li:last-child a {
+  margin-bottom:30px;
+  border-bottom:1px solid #d8d8d8;
+}
+
+.footer {
+  border-top: 1px solid #e5e5e5;
+  overflow:hidden;
+  padding:10px 0;
+  text-align:center;
 }
