--- a/public/css/bootstrap.css
+++ b/public/css/bootstrap.css
@@ -12,8 +12,18 @@
   I cleanup bootstrap many parts.
 */
 
+* {
+  margin:0;
+  padding:0;
+
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  -o-box-sizing: border-box;
+  -ms-box-sizing: border-box;
+  box-sizing: border-box;
+}
+
 body {
-  margin: 0;
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-size: 14px;
   line-height: 130%;
@@ -1534,4 +1544,43 @@ button.close {
 
 .markdown ul {
   padding : 0 1em;
+}
+
+.header {
+  padding-top:10px;
+  background:#f5f5f5;
+  border-bottom:1px solid #e5e5e5;
+  margin-bottom:10px;
+  overflow:hidden;
+}
+
+.header-left {
+  float:left;
+  width:50%;
+  overflow:hidden;
+}
+
+.header-right {
+  float:left;
+  width:50%;
+  overflow:hidden;
+}
+
+.title {
+  float:left;
+  font-size:19px;
+  padding-top:7px;
+}
+
+.header-search {
+  float:left;
+  margin-left:10px;
+  padding-top:4px;
+}
+
+.header-search input {
+  padding:4px 5px;
+  box-shadow: inset 0 1px 2px rgba(0,0,0,0.075);
+  border: 1px solid #ccc;
+  border-radius: 3px;
 }
