--- a/public/css/bootstrap.css
+++ b/public/css/bootstrap.css
@@ -1547,7 +1547,6 @@ button.close {
 }
 
 .header {
-  padding-top:10px;
   background:#f5f5f5;
   border-bottom:1px solid #e5e5e5;
   margin-bottom:10px;
@@ -1561,7 +1560,6 @@ button.close {
 }
 
 .header-right {
-  float:left;
   width:50%;
   overflow:hidden;
 }
@@ -1569,13 +1567,13 @@ button.close {
 .title {
   float:left;
   font-size:19px;
-  padding-top:7px;
+  padding:14px 0 12px 0;
 }
 
 .header-search {
   float:left;
   margin-left:10px;
-  padding-top:4px;
+  padding:11px 0 8px 0;
 }
 
 .header-search input {
@@ -1583,4 +1581,20 @@ button.close {
   box-shadow: inset 0 1px 2px rgba(0,0,0,0.075);
   border: 1px solid #ccc;
   border-radius: 3px;
+}
+
+.header-rigth-container {
+  float:right;
+  overflow:hidden;
+}
+
+.header-btn-container {
+  float:left;
+  margin-right:4px;
+  padding-top:9px;
+}
+
+.header-login-container {
+  float:left;
+  padding-top:13px;
 }
