--- a/public/css/bootstrap.css
+++ b/public/css/bootstrap.css
@@ -1566,7 +1566,7 @@ button.close {
 .footer {
   text-align:center;
   border-top:1px solid #e5e5e5;
-  padding-top:15px;
+  padding:15px 0;
 }
 
 .repositories {
