--- a/public/css/bootstrap.css
+++ b/public/css/bootstrap.css
@@ -1564,6 +1564,7 @@ button.close {
   text-align:center;
   border-top:1px solid #e5e5e5;
   padding:15px 0;
+  margin-top:30px;
 }
 
 .repositories {
@@ -1648,4 +1649,19 @@ button.close {
 
 .branch-select-left-container-page-path {
   width:100%;
+}
+
+.readme-header {
+  background-color: #f5f5f5;
+  border-radius: 3px 3px 0 0;
+  border: 1px solid #d8d8d8;
+  border-bottom: 0;
+  padding: 9px 10px 10px;
+  font-size: 14px;
+  line-height: 17px;
+  font-weight:bold;
+}
+
+.readme-frame {
+  border: 1px solid #d8d8d8;
 }
