--- a/public/css/bootstrap.css
+++ b/public/css/bootstrap.css
@@ -35,6 +35,14 @@
   box-sizing: border-box;
 }
 
+.text-gray { color:#767676 }
+
+input[type=text], input[type=password] {
+  border:1px solid #d8d8d8;
+  border-radius: 3px;
+  padding:6px 5px;
+}
+
 .container {
   width: 980px;
   margin:0 auto;
@@ -2181,6 +2189,76 @@ button.close {
   min-height:1px;
 }
 
+.search-top {
+  border-bottom:1px solid #d8d8d8;
+  margin-bottom:20px;
+  padding-bottom:20px;
+}
+
+.search-top input {
+  margin-left:5px;
+}
+
+.search-top > div:first-child {
+  font-size:19px;
+  display:inline-block;
+}
+
+.search-top form {
+  display:inline-block;
+}
+
+.search-result {
+  overflow:hidden;
+}
+
+.search-result .left {
+  float:left;
+  width:15%;
+  padding-right:10px;
+}
+
+.search-result .left li {
+  border:1px solid #d8d8d8;
+  border-top:none;
+  padding:7px 10px;
+}
+
+.search-result .left li:first-child {
+  border-top:1px solid #d8d8d8;
+}
+
+.search-result .right {
+  float:left;
+  width:85%;
+  padding-left:15px;
+}
+
+.search-result .right li {
+  border-bottom: 1px solid #d8d8d8;
+  padding:5px 0px;
+  margin-bottom:10px;
+}
+
+.search-result .right li > div {
+  padding-bottom:1px;
+}
+
+.search-result .right > div:first-child {
+   font-size:18px;
+   padding-bottom:10px;
+   margin-bottom:10px;
+   border-bottom:1px solid #EEEEEE;
+   font-weight:bold;
+}
+
+.search-result .left li.active a {
+  color:black;
+  font-weight:bold;
+  text-decoration:none;
+}
+
+
 .project-settings {
   overflow:hidden;
 }
@@ -2358,3 +2436,5 @@ button.close {
   width:100%;
   min-height:200px;
 }
+
+.pagination-num{margin:20px 0}.pagination-num ul{display:inline-block;*display:inline;margin-bottom:0;margin-left:0;-webkit-border-radius:4px;-moz-border-radius:4px;border-radius:4px;*zoom:1;-webkit-box-shadow:0 1px 2px rgba(0,0,0,0.05);-moz-box-shadow:0 1px 2px rgba(0,0,0,0.05);box-shadow:0 1px 2px rgba(0,0,0,0.05)}.pagination-num ul>li{display:inline}.pagination-num ul>li>a,.pagination-num ul>li>span{float:left;padding:4px 12px;line-height:20px;text-decoration:none;background-color:#fff;border:1px solid #ddd;border-left-width:0}.pagination-num ul>li>a:hover,.pagination-num ul>li>a:focus,.pagination-num ul>.active>a,.pagination-num ul>.active>span{background-color:#f5f5f5}.pagination-num ul>.active>a,.pagination-num ul>.active>span{color:#999;cursor:default}.pagination-num ul>.disabled>span,.pagination-num ul>.disabled>a,.pagination-num ul>.disabled>a:hover,.pagination-num ul>.disabled>a:focus{color:#999;cursor:default;background-color:transparent}.pagination-num ul>li:first-child>a,.pagination-num ul>li:first-child>span{border-left-width:1px;-webkit-border-bottom-left-radius:4px;border-bottom-left-radius:4px;-webkit-border-top-left-radius:4px;border-top-left-radius:4px;-moz-border-radius-bottomleft:4px;-moz-border-radius-topleft:4px}.pagination-num ul>li:last-child>a,.pagination-num ul>li:last-child>span{-webkit-border-top-right-radius:4px;border-top-right-radius:4px;-webkit-border-bottom-right-radius:4px;border-bottom-right-radius:4px;-moz-border-radius-topright:4px;-moz-border-radius-bottomright:4px}.pagination-num-centered{text-align:center}.pagination-num-right{text-align:right}.pagination-num-large ul>li>a,.pagination-num-large ul>li>span{padding:11px 19px;font-size:17.5px}.pagination-num-large ul>li:first-child>a,.pagination-num-large ul>li:first-child>span{-webkit-border-bottom-left-radius:6px;border-bottom-left-radius:6px;-webkit-border-top-left-radius:6px;border-top-left-radius:6px;-moz-border-radius-bottomleft:6px;-moz-border-radius-topleft:6px}.pagination-num-large ul>li:last-child>a,.pagination-num-large ul>li:last-child>span{-webkit-border-top-right-radius:6px;border-top-right-radius:6px;-webkit-border-bottom-right-radius:6px;border-bottom-right-radius:6px;-moz-border-radius-topright:6px;-moz-border-radius-bottomright:6px}.pagination-num-mini ul>li:first-child>a,.pagination-num-small ul>li:first-child>a,.pagination-num-mini ul>li:first-child>span,.pagination-num-small ul>li:first-child>span{-webkit-border-bottom-left-radius:3px;border-bottom-left-radius:3px;-webkit-border-top-left-radius:3px;border-top-left-radius:3px;-moz-border-radius-bottomleft:3px;-moz-border-radius-topleft:3px}.pagination-num-mini ul>li:last-child>a,.pagination-num-small ul>li:last-child>a,.pagination-num-mini ul>li:last-child>span,.pagination-num-small ul>li:last-child>span{-webkit-border-top-right-radius:3px;border-top-right-radius:3px;-webkit-border-bottom-right-radius:3px;border-bottom-right-radius:3px;-moz-border-radius-topright:3px;-moz-border-radius-bottomright:3px}.pagination-num-small ul>li>a,.pagination-num-small ul>li>span{padding:2px 10px;font-size:11.9px}.pagination-num-mini ul>li>a,.pagination-num-mini ul>li>span{padding:0 6px;font-size:10.5px}
