--- a/public/css/bootstrap.css
+++ b/public/css/bootstrap.css
@@ -2505,11 +2505,11 @@ button.close {
   min-height:200px;
 }
 
-/* ページネーション */
-.pagination-num{
+/* 番号つきページネーション */
+.pagination-num　{
   margin:20px 0
 }
-.pagination-num ul{
+.pagination-num ul　{
   display:inline-block;
   margin-bottom:0;
   margin-left:0;
@@ -2530,7 +2530,6 @@ button.close {
   border-left-width:0
 }
 .pagination-num ul > li > a:hover,
-.pagination-num ul > li > a:focus,
 .pagination-num ul > .active > a,
 .pagination-num ul > .active > span
 {
@@ -2544,7 +2543,6 @@ button.close {
 .pagination-num ul > .disabled > span,
 .pagination-num ul > .disabled > a,
 .pagination-num ul > .disabled > a:hover,
-.pagination-num ul > .disabled > a:focus
 {
   color:#999;
   cursor:default;
@@ -2562,56 +2560,4 @@ button.close {
 {
   border-top-right-radius:4px;
   border-bottom-right-radius:4px;
-}
-.pagination-num-centered {
-  text-align:center
-}
-.pagination-num-right {
-  text-align:right
-}
-.pagination-num-large ul > li > a,
-.pagination-num-large ul > li > span
-{
-  padding:11px 19px;
-  font-size:17.5px;
-}
-.pagination-num-large ul > li:first-child > a,
-.pagination-num-large ul > li:first-child > span
-{
-  border-bottom-left-radius:6px;
-  border-top-left-radius:6px;
-}
-.pagination-num-large ul>li:last-child > a,
-.pagination-num-large ul>li:last-child > span
-{
-  border-top-right-radius:6px;
-  border-bottom-right-radius:6px;
-}
-.pagination-num-mini ul > li:first-child > a,
-.pagination-num-small ul > li:first-child >a,
-.pagination-num-mini ul > li:first-child > span,
-.pagination-num-small ul>li:first-child > span
-{
-  border-bottom-left-radius:3px;
-  border-top-left-radius:3px;
-}
-.pagination-num-mini ul > li:last-child > a,
-.pagination-num-small ul > li:last-child > a,
-.pagination-num-mini ul > li:last-child > span,
-.pagination-num-small ul > li:last-child > span
-{
-  border-top-right-radius:3px;
-  border-bottom-right-radius:3px;
-}
-.pagination-num-small ul > li > a,
-.pagination-num-small ul > li > span
-{
-  padding:2px 10px;
-  font-size:11.9px
-}
-.pagination-num-mini ul > li > a,
-.pagination-num-mini ul > li >span
-{
-  padding:0 6px;
-  font-size:10.5px;
 }
